Ref#59087: Scheduled email modal table alignment issue

--- a/styles.css
+++ b/styles.css
@@ -499,7 +499,8 @@
 }
 
 div[id^="wdm-"][id*="-individual"] table.table,
-#wdm-elucidsitereport .table {
+#wdm-elucidsitereport .table,
+.modal-dialog .table {
     min-width: 100%;
 }
 
